# cat-dog-classifier

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements-vercel.txt  requirements.txt  setup.py  vercel.json
api/: index.py  requirements.txt
web/: app.py
web/static/: app.js  index.html  style.css
